@@ -8,4 +8,4 @@
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
 PARENT_DIR="$(dirname $DIR)"
 
-php $PARENT_DIR/init.php internal/hash_db_list
+php $PARENT_DIR/init.php internal/url_alias_db_add $1 $2
